--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,9 @@
 
 body {
     font-family: Montserrat, 'Helvetica Neue', sans-serif;
-}
-
-main {
     background-color: #F6F5F3;
 }
+
 
 img {
     display: block;
@@ -59,7 +57,6 @@ h3 {
 }
 
 .col {
-    width: 100%;
     padding: 20px;
 }
 
@@ -94,6 +91,12 @@ button {
 
 /*Header*/
 
+header {
+    background-color: #fff;
+    padding-top: 20px;
+    padding-left: 20px;
+}
+
 header h1 {
     text-align: center;
 }
@@ -125,6 +128,7 @@ h2 span {
     border-radius: 5px;
     width: 100%;
     margin: 0 auto;
+    padding: 10px;
 
 
 
@@ -185,6 +189,10 @@ li .fa-solid {
     padding: 5px 10px;
     border-radius: 10px;
     box-shadow: 10px 13px 23px gray;
+}
+
+.social-links span {
+    display: none;
 }
 
 .fa-brands {
@@ -258,5 +266,5 @@ address {
 
 .address-footer a {
     color: #fff;
-    flex-basis: 25%;
+    margin-right: 30px;
 }
