--- a/css/responsive.css
+++ b/css/responsive.css
@@ -51,6 +51,11 @@
 }
 
 @media screen and (min-width: 992px) {
+    header h1 {
+        max-width: 1500px;
+        margin: 0 auto;
+    }
+
     .container {
         max-width: 992px;
     }
@@ -87,6 +92,8 @@
     }
 
     .footer-container {
+        max-width: 1500px;
+        margin: 0 auto;
         display: flex;
         justify-content: space-between;
         text-align: left;
